--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+annotated-types==0.7.0
 asgiref==3.8.1
+asttokens==3.0.0
+cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 cloudinary==1.41.0
+decorator==5.1.1
 Django==5.1.2
 django-channels==0.7.0
 django-cloudinary-storage==0.3.0
@@ -10,15 +14,49 @@ django-model-utils==5.0.0
 django-rest-framework==0.1.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+executing==2.1.0
+google-ai-generativelanguage==0.6.10
+google-api-core==2.23.0
+google-api-python-client==2.154.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.3
+googleapis-common-protos==1.66.0
+grpcio==1.68.1
+grpcio-status==1.68.1
+httplib2==0.22.0
 idna==3.10
+ipython==8.30.0
+jedi==0.19.2
+matplotlib-inline==0.1.7
 oauthlib==3.2.2
+parso==0.8.4
+pexpect==4.9.0
 pillow==10.4.0
+prompt_toolkit==3.0.48
+proto-plus==1.25.0
+protobuf==5.29.0
 psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.2
+pydantic_core==2.27.1
+Pygments==2.18.0
 PyJWT==2.9.0
+pyparsing==3.2.0
 python-dotenv==1.0.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 rest-framework-simplejwt==0.0.2
+rsa==4.9
 six==1.16.0
 sqlparse==0.5.1
+stack-data==0.6.3
+tqdm==4.67.1
+traitlets==5.14.3
+typing_extensions==4.12.2
+uritemplate==4.1.1
 urllib3==2.2.3
+wcwidth==0.2.13
