--- a/requirements.txt
+++ b/requirements.txt
@@ -24,12 +24,14 @@ google-generativeai==0.8.3
 googleapis-common-protos==1.66.0
 grpcio==1.68.1
 grpcio-status==1.68.1
+gunicorn==23.0.0
 httplib2==0.22.0
 idna==3.10
 ipython==8.30.0
 jedi==0.19.2
 matplotlib-inline==0.1.7
 oauthlib==3.2.2
+packaging==24.2
 parso==0.8.4
 pexpect==4.9.0
 pillow==10.4.0
